# ginkgo

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  INSTALL.md
.github/workflows/: bot-pr-updated.yml  windows-msvc-cuda.yml
.gitlab/: image.yml  scripts.yml  variables.yml
benchmark/: CMakeLists.txt
benchmark/blas/: blas_common.hpp
benchmark/conversion/: conversion.cpp
benchmark/matrix_statistics/: matrix_statistics.cpp
benchmark/preconditioner/: preconditioner.cpp
benchmark/solver/: solver_common.hpp
benchmark/sparse_blas/: operations.cpp  sparse_blas.cpp
benchmark/spmv/: spmv_common.hpp
benchmark/tools/: matrix.cpp
benchmark/utils/: cuda_linops.cpp  formats.hpp  general.hpp  general_matrix.hpp  generator.hpp  hip_linops.hip.cpp
cmake/: GinkgoConfig.cmake.in  build_helpers.cmake  create_test.cmake  cuda.cmake  get_info.cmake  hip.cmake
core/: CMakeLists.txt
core/base/: array.cpp  batch_multi_vector.cpp  composition.cpp  index_set.cpp  mtx_io.cpp
core/components/: disjoint_sets.hpp
core/config/: config.cpp  config.hpp  dispatch.hpp  property_tree.cpp
core/device_hooks/: common_kernels.inc.cpp  hip_hooks.cpp
core/distributed/: matrix.cpp  partition.cpp  partition_helpers.cpp
core/factorization/: cholesky.cpp  elimination_forest.cpp  ic.cpp  ilu.cpp  lu.cpp  (+5 more)
cuda/: CMakeLists.txt  get_info.cmake
dpcpp/: CMakeLists.txt
examples/: CMakeLists.txt
hip/: CMakeLists.txt
hip/test/base/: CMakeLists.txt  hip_executor.hip.cpp  kernel_launch.hip.cpp  math.hip.cpp  memory.cpp
omp/: CMakeLists.txt
reference/: CMakeLists.txt
(+444 files in other folders)
