ginkgo_create_hip_test(hip_executor)
ginkgo_create_test(index_set)
ginkgo_create_test(hip_executor_reset ADDITIONAL_LIBRARIES Threads::Threads)
if(GINKGO_HAVE_HWLOC)
    find_package(NUMA REQUIRED)
    ginkgo_create_hip_test(hip_executor_topology ADDITIONAL_LIBRARIES NUMA::NUMA)
endif()
ginkgo_create_hip_test(kernel_launch)
ginkgo_create_hip_test(lin_op)
ginkgo_create_hip_test(math)
ginkgo_create_hip_test(exception_helpers)
ginkgo_create_hip_test(scoped_device_id)
